--- a/nutrition.css
+++ b/nutrition.css
@@ -14,7 +14,7 @@ article {
 h1 {
   margin: 0;
   font-size: 2rem;
-  font-family: "Franklin Gothic Heavy", inherit;
+  font-family:"Franklin Gothic Heavy", inherit;
 }
 
 h3 {
@@ -51,6 +51,7 @@ thead th {
 }
 
 td {
+ /* border-collapse: collapse;*/
   padding-bottom: 4px;
   border-bottom: 1px solid black
 }
@@ -61,6 +62,7 @@ td {
 
 tbody td:last-child {
   text-align:right;
+  /*background-color:yellow;*/
 }
 
 tbody td:only-child {
@@ -95,6 +97,7 @@ table:nth-of-type(4) tr:first-of-type {
 }
 
 p:nth-of-type(3) {
+  padding-top:15px;
   font-size: 0.915rem;
   border-bottom:none;
 }
